--- a/test_op_kernel.ipynb
+++ b/test_op_kernel.ipynb
@@ -270,10 +270,7 @@
     "    for key2 in op_kernel:\n",
     "        if key1!=key2:\n",
     "            if len(op_kernel[key1]&op_kernel[key2])>0:\n",
-    "                print(key1,key2,op_kernel[key1]&op_kernel[key2])\n",
-    "\n",
-    "#key的set\n",
-    "op_kernel"
+    "                print(key1,key2,op_kernel[key1]&op_kernel[key2])\n"
    ]
   }
  ],
